# oop-labs

./: .gitignore
.devcontainer/: Dockerfile
lab_1/: CMakeLists.txt
lab_1/.devcontainer/: devcontainer.json
lab_1/include/: divider.hpp
lab_1/src/: divider.cpp  main.cpp
lab_1/tests/: test.cpp
lab_2/: CMakeLists.txt
lab_2/include/: six.h
lab_2/src/: six.cpp
lab_2/tests/: main.cpp
lab_3/: CMakeLists.txt
lab_3/include/base/: container.h  figure.h  point.h  polygon.h
lab_3/include/shapes/: hexagon.h  octagon.h  triangle.h
lab_3/src/: main.cpp
lab_3/src/base/: container.cpp  polygon.cpp
lab_3/src/shapes/: hexagon.cpp  octagon.cpp  triangle.cpp
lab_3/tests/: triangle.cpp
lab_5/: CMakeLists.txt
lab_5/include/: block_allocator.h  stack.tpp
lab_5/src/: block_allocator.cpp  main.cpp
lab_5/tests/: block_allocator.cpp  stack.cpp
lab_6/: CMakeLists.txt  main.cpp
lab_6/include/logging/: display.h  file.h  structures.h
lab_6/include/npc/: knight.h  npc.h  pegasus.h  squarrel.h
lab_6/src/factories/: npc.cpp
lab_6/src/logging/: CMakeLists.txt  display.cpp  file.cpp  structures.cpp
lab_6/src/npc/: CMakeLists.txt  knight.cpp  npc.cpp  pegasus.cpp  squarrel.cpp
lab_6/testing/: CMakeLists.txt  factory.cpp  npc.cpp
lab_7/: CMakeLists.txt  main.cpp
lab_7/include/factories/: npc.h
lab_7/include/mics/: globals.h
lab_7/include/npc/: knight.h  npc.h  pegasus.h  squarrel.h
lab_7/src/factories/: CMakeLists.txt
lab_7/src/npc/: knight.cpp  npc.cpp  pegasus.cpp  squarrel.cpp
